public/css/style.css
#video-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, 300px);
  grid-auto-rows: 300px;
}

video {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.scroll {
  max-height: 600px;
  overflow: auto;
  border: 1px solid #ccc;
  padding: 10px;
  margin: 10px 0;
}

/* Andy added this syling below */
a {
  color: #fff;
}

button {
  background-color: #7b00ff;
  color: #fff;
  padding: 10px 15px;
  border: solid;
  border-radius: 25px;
  cursor: pointer;
}

body {
  background-color: rgba(177, 255, 252, 0.541);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.center-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 50vh;
  padding-top: 320px; 
}

#make-video {
  background-color: #7b00ff;
  color: #fff;
  padding: 10px 15px;
  border: none;
  cursor: pointer;
}

#logout {
  background-color: #7b00ff;
  color: #fff;
  padding: 10px 15px;
  border: none;
  cursor: pointer;
}

.login-form,
.signup-form {
  text-align: left;
  width: 300px; /* Adjust the width as needed */
  margin: 10px auto;
}

.login-form label,
.signup-form label {
  display: block;
  margin-bottom: 5px;
}

.login-form input,
.signup-form input {
  width: 100%;
  padding: 8px;
  margin-bottom: 10px;
}

.login-form button,
.signup-form button {
  background-color: #7b00ff;
  color: #fff;
  padding: 10px 15px;
  border: none;
  cursor: pointer;
}

